# known-path

./: .env.example  .gitignore  CARA_PAKAI.md  LICENSE  README.md  pyproject.toml
apps/web/: app.py
cards/: job.revenue_by_region_quarter.yaml
datasets/demo-finance/: README.md  catalog.json  region_sample.csv  revenue_canonical_sample.csv  revenue_old_trap_sample.csv
docs/: DATAHUB_CREDENTIALS.md  DATAHUB_LOCAL_TEST.md  HACKATHON.md  UX_AND_RESOURCES.md  demo-script.md
docs/demo-recording/: 00-doctor.txt  01-cli-demo-full.txt  02-artifacts.txt  README.md  live-capture.html  revenue_by_region.sql  writeback_route_note.md
examples/: baseline_wrong.sql  revenue_by_region.sql
examples/runs/: last_baseline.json  last_blocked.json  last_known-path.json  last_writeback_blocked.json  last_writeback_known-path.json  writeback_route_note.md
scripts/: mini_gms.py  start_datahub_stack.sh
skills/known-path/: SKILL.md  TOOLS.md
src/known_path/: __init__.py  __main__.py  activate.py  agent_runtime.py  baseline.py  cards.py  cli.py  cli_bridge.py  datahub_client.py  dataset_io.py  fixtures.py  mcp_server.py  models.py  ping.py  runner.py  scoring.py  settings_store.py  sql_gen.py  webapp.py
tests/: test_cli_bridge.py  test_scoring_activate.py
